--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-:root {
-  --link-color: #f37a29;
-}
-
 @keyframes fade-in {
   0% {
     opacity: 0;
@@ -12,9 +8,14 @@
   }
 }
 
+html,
+body {
+  overflow: hidden;
+  margin: 0;
+}
+
 body {
   font-family: 'Fira Code', monospace;
-  margin: 0;
   background-color: #24262e;
   color: white;
   animation: fade-in 500ms;
@@ -33,6 +34,11 @@ body {
 
 #stars {
   overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
+canvas {
   width: 100%;
   height: 100%;
 }
